--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -45,6 +45,8 @@ jwt.refresh-expiration=${JWT_REFRESH_EXPIRATION:604800000}
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 spring.servlet.multipart.file-size-threshold=1KB
+# 上传目录设置为项目根目录的uploads文件夹（相对于backend目录）
+file.upload-dir=../uploads
 
 # Cross-Origin Configuration (Production should specify exact origins)
 spring.web.cors.allowed-origins=${CORS_ALLOWED_ORIGINS:http://localhost:5173,http://localhost:3000}
