--- a/frontend/.env.development
+++ b/frontend/.env.development
@@ -3,3 +3,6 @@ VITE_API_BASE_URL=/api
 
 # 应用标题
 VITE_APP_TITLE=购物商城 - 开发环境
+
+# AI服务密钥 (硅基流动 SiliconFlow)
+VITE_AI_API_KEY=sk-idlntraplckehaeuesoerhzpuypwtynmohdpltdrxvbtarnd
