--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,11 +13,13 @@
   },
   "dependencies": {
     "axios": "^1.13.2",
+    "echarts": "^6.0.0",
     "element-plus": "^2.13.0",
     "pinia": "^3.0.4",
     "sass": "^1.97.1",
     "vee-validate": "^4.15.1",
     "vue": "^3.5.24",
+    "vue-echarts": "^8.0.1",
     "vue-router": "^4.6.4"
   },
   "devDependencies": {
